# Persona

./: .gitignore  2026-04-07-ai-novel-creation-system-design.md  AGENT.md  AI 约束式文风模仿长篇创作系统：方案探索.md  ANALYZE-GENERATE.md  Makefile  Persona-约束式文风模仿长篇创作系统设计.md  README.md  check_syntax.py  commit.sh  complexity_check.py  docker-compose.yml  test_bool.py  test_query.py  小说prompt.md  换元仿写提示词.txt  文风分析提示词.txt
api/: README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  0002_style_lab.py  0003_deep_analysis_results.py  0004_style_profiles_payload_only.py  0005_remove_style_job_draft_payload.py  0006_style_job_leases.py  (+31 more)
api/app/: main.py  worker.py
api/tests/: conftest.py  sample_novel.txt  test_analysis_worker_lifecycle.py  test_chapter_rewrite_batches.py  test_chapter_rewrite_patches.py  test_config.py  test_context_assembly.py  test_context_assembly_v2.py  test_editor_concepts.py  test_editor_memory.py  test_editor_nsfw_live.py  test_editor_prompts.py  test_hook_framework_live.py  test_legacy_editor_api_retired.py  test_length_presets.py  test_migrations.py  test_novel_chapter_rewrite_jobs.py  test_novel_imports.py  test_novel_prompt_modules.py  test_novel_workflow_agents.py  test_novel_workflow_pipeline.py  test_novel_workflows_api.py  test_outline_parser.py  test_plot_analysis_jobs.py  test_plot_analysis_pipeline_graph.py  test_plot_analysis_prompts.py  test_plot_analysis_storage.py  test_plot_analysis_text.py  test_plot_profiles.py  test_project_chapters.py  test_projects.py  test_prompt_injection_policy.py  test_prompt_profile_contracts.py  test_prompt_registry.py  test_prompt_stack.py  test_prompt_trace.py  test_prose_validation.py  test_provider_configs.py  test_provider_configs_live.py  test_redaction.py  (+7 more)
(+919 files in other folders)
